force-app/main/default/objects/Prize__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mail公告</description>
    <inlineHelpText>Mail公告</inlineHelpText>
    <label>Announcement</label>
    <type>Checkbox</type>
</CustomField>