force-app/main/default/objects/Prize__c/fields/Drawing_No__c.field-meta.xml
<CustomField>
    <fullName>Drawing_No__c</fullName>
    <label>Drawing No.</label>
    <referenceTo>Lucky_Draw_Setting__c</referenceTo>
    <relationshipLabel>Prizes</relationshipLabel>
    <relationshipName>Prize</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>