force-app/main/default/objects/Prize__c/fields/F_No__c.field-meta.xml
<CustomField>
    <fullName>F_No__c</fullName>
    <formula>Value(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>