force-app/main/default/objects/Prize__c/fields/Prize_Name__c.field-meta.xml
<CustomField>
    <fullName>Prize_Name__c</fullName>
    <label>Prize Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>