force-app/main/default/objects/Prize__c/fields/Prize_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Prize_Name_English__c</fullName>
    <label>Prize Name (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>