force-app/main/default/objects/Prize__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Flight experience</fullName>
            </value>
            <value>
                <fullName>Ticket buying experience</fullName>
            </value>
            <value>
                <fullName>Ticket buying experience &amp; Flight experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>