force-app/main/default/objects/Prize__c/fields/Unit_English__c.field-meta.xml
<CustomField>
    <fullName>Unit_English__c</fullName>
    <label>Unit (English)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>